# new_admin_panel_sprint_3

./: .dockerignore  .gitignore  README.md  setup.cfg
01_docker_compose/own_project/: docker-compose.yml  pyproject.toml  readme.md
own_project/: .dockerignore  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  readme.md
own_project/app/: create_super_user.sh
own_project/app/config/: .env.example  settings.py  urls.py
own_project/app/movies/: admin.py  apps.py  models.py  signals.py
own_project/ci/app/: .env.example  Dockerfile
own_project/ci/etl_service/: .env.example  Dockerfile
own_project/ci/postgres/: .env.example  Dockerfile
own_project/ci/postgres_pump/: .env.example  Dockerfile
own_project/configs/: site.conf
own_project/postgres_to_es/: .env.example  config.py  etl_process.py  readme.md
own_project/postgres_to_es/connectors/: es.py  postgres.py
own_project/postgres_to_es/etl_pipe/: etl_entities_mapping.py  extract.py  load.py  transform.py
own_project/postgres_to_es/etl_scripts/: common_etl_request.sh  delete_etl_all_tables.sh
own_project/postgres_to_es/models/: config.py  data.py
own_project/postman/: movies_etl.postman_collection.json  openapi.yaml
own_project/setup_scripts/: accept_django_locales.sh  create_db.sh  create_django_locales.sh  create_django_migration.sh  create_django_super_user.sh  run_django_migrations.sh  run_django_server_locally.sh
own_project/sqlite_to_postgres/: .env  .env.example  iterator.py  load_data.py  loader.py  models.py  movies_database.sql  utils.py
(+23 files in other folders)
